Lots of new stuff but not really everything works??