@@ -8,9 +8,9 @@ import me.kakaroot.rigPlugin.managers.MsgManager;
 import me.kakaroot.rigPlugin.managers.RigManager;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
-
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
@@ -28,23 +28,24 @@ public class EditRigInventory {
 
     public void open(Player player, String rigName) {
         UUID uuid = player.getUniqueId();
-        GUIManager gui = new GUIManager("Edit Rig", 1, uuid);
+        GUIManager gui = new GUIManager("Edit Rig", 2, uuid);
 
         // Rename button
         ItemStack rename = GUIManager.createItem(Material.NAME_TAG, "Rename Rig");
         ItemMeta renameMeta = rename.getItemMeta();
         if (renameMeta != null) {
-            renameMeta.setLore(Arrays.asList("Click to rename this rig"));
+            renameMeta.setLore(List.of("Click to rename this rig"));
             rename.setItemMeta(renameMeta);
         }
-        gui.addItem(0, rename);
-        gui.setClickAction(0, (p, e) -> {
+        gui.addItem(2, rename);
+        gui.setClickAction(2, (p, e) -> {
             MsgManager.send(p, "Renaming rig: " + rigName);
+            player.closeInventory();
             ChatPromptManager promptManager = new ChatPromptManager(RigPlugin.getInstance());
             promptManager.promptPlayer(p, "Enter a new name for this rig:", input -> {
-                rigManager.setName(rigName, input); // pass old + new name
+                rigManager.setName(rigName, input);
                 MsgManager.send(p, "Rig renamed to: " + input);
-                open(player, input); // re-open with new name
+                open(player, input);
             });
         });
 
@@ -52,11 +53,11 @@ public class EditRigInventory {
         ItemStack delete = GUIManager.createItem(Material.BARRIER, "Delete Rig");
         ItemMeta deleteMeta = delete.getItemMeta();
         if (deleteMeta != null) {
-            deleteMeta.setLore(Arrays.asList("Click to delete this rig"));
+            deleteMeta.setLore(List.of("Click to delete this rig"));
             delete.setItemMeta(deleteMeta);
         }
-        gui.addItem(1, delete);
-        gui.setClickAction(1, (p, e) -> {
+        gui.addItem(3, delete);
+        gui.setClickAction(3, (p, e) -> {
             MsgManager.send(p, "Deleting rig: " + rigName);
             rigManager.deleteRig(rigName);
             viewRigsInventory.open(player);
@@ -66,54 +67,139 @@ public class EditRigInventory {
         ItemStack editLoot = GUIManager.createItem(Material.CHEST, "Edit Loot");
         ItemMeta lootMeta = editLoot.getItemMeta();
         if (lootMeta != null) {
-            lootMeta.setLore(Arrays.asList("Click to edit this rig's loot"));
+            lootMeta.setLore(List.of("Click to edit this rig's loot"));
             editLoot.setItemMeta(lootMeta);
         }
-        gui.addItem(2, editLoot);
-        gui.setClickAction(2, (p, e) -> {
+        gui.addItem(4, editLoot);
+        gui.setClickAction(4, (p, e) -> {
             MsgManager.send(p, "Editing loot for rig: " + rigName);
-            LootEditorInventory.open(p, rigName, rigManager);
+            LootEditorInventory.open(p, rigName, rigManager,viewRigsInventory);
         });
 
         // Edit Guards button
         ItemStack editGuards = GUIManager.createItem(Material.IRON_SWORD, "Edit Guards");
         ItemMeta guardMeta = editGuards.getItemMeta();
         if (guardMeta != null) {
-            guardMeta.setLore(Arrays.asList("Click to edit this rig's guards"));
+            guardMeta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
+            guardMeta.setLore(List.of("Click to edit this rig's guards"));
             editGuards.setItemMeta(guardMeta);
         }
-        gui.addItem(3, editGuards);
-        gui.setClickAction(3, (p, e) -> {
+        gui.addItem(5, editGuards);
+        gui.setClickAction(5, (p, e) -> {
             MsgManager.send(p, "Viewing guards for rig: " + rigName);
-            ViewGuardsInventory.open(p, rigName, rigManager);
+            ViewGuardsInventory.open(p, rigName, rigManager,viewRigsInventory);
         });
 
-        // Frequency button
+// Frequency button
         ItemStack freqButton = GUIManager.createItem(Material.CLOCK, "Edit Frequency");
         ItemMeta freqMeta = freqButton.getItemMeta();
         if (freqMeta != null) {
             freqMeta.setLore(Arrays.asList(
                     "§7Current frequency: every " + rigManager.getFrequency(rigName) + " minutes",
-                    "§eLeft-click to increase by 5 minutes",
-                    "§eRight-click to decrease by 5 minutes"
+                    "§eLeft-click: Increase by 5 minutes",
+                    "§eRight-click: Decrease by 5 minutes",
+                    "§eShift-left: Increase by 1 minute",
+                    "§eShift-right: Decrease by 1 minute"
             ));
             freqButton.setItemMeta(freqMeta);
         }
-        gui.addItem(4, freqButton);
-        gui.setClickAction(4, (p, e) -> {
+        gui.addItem(6, freqButton);
+        gui.setClickAction(6, (p, e) -> {
             int current = rigManager.getFrequency(rigName);
 
-            if (e.getClick().isLeftClick()) {
-                rigManager.setFrequency(rigName, current + 5);
-                MsgManager.send(p, "§aRig frequency for " + rigName + " increased to " + (current + 5) + " minutes.");
-            } else if (e.getClick().isRightClick()) {
-                int newVal = Math.max(5, current - 5);
-                rigManager.setFrequency(rigName, newVal);
-                MsgManager.send(p, "§cRig frequency for " + rigName + " decreased to " + newVal + " minutes.");
+            switch (e.getClick()) {
+                case LEFT -> {
+                    rigManager.setFrequency(rigName, current + 5);
+                    MsgManager.send(p, "§aRig frequency for " + rigName + " increased to " + (current + 5) + " minutes.");
+                }
+                case RIGHT -> {
+                    int newVal = Math.max(1, current - 5);
+                    rigManager.setFrequency(rigName, newVal);
+                    MsgManager.send(p, "§cRig frequency for " + rigName + " decreased to " + newVal + " minutes.");
+                }
+                case SHIFT_LEFT -> {
+                    rigManager.setFrequency(rigName, current + 1);
+                    MsgManager.send(p, "§aRig frequency for " + rigName + " increased to " + (current + 1) + " minutes.");
+                }
+                case SHIFT_RIGHT -> {
+                    int newVal = Math.max(1, current - 1);
+                    rigManager.setFrequency(rigName, newVal);
+                    MsgManager.send(p, "§cRig frequency for " + rigName + " decreased to " + newVal + " minutes.");
+                }
             }
 
-            open(player, rigName); // Refresh GUI
+            open(player, rigName);
         });
+
+        // Edit Guard Count button
+        ItemStack editGuardCount = GUIManager.createItem(Material.PLAYER_HEAD, "Edit Guard Count");
+        ItemMeta countMeta = editGuardCount.getItemMeta();
+        if (countMeta != null) {
+            countMeta.setLore(Arrays.asList(
+                    "§7Current guard count: " + rigManager.getGuardCount(rigName),
+                    "Click to change guard count"
+            ));
+            editGuardCount.setItemMeta(countMeta);
+        }
+        gui.addItem(11, editGuardCount);
+        gui.setClickAction(11, (p, e) -> {
+            player.closeInventory();
+            ChatPromptManager promptManager = new ChatPromptManager(RigPlugin.getInstance());
+            promptManager.promptPlayer(p, "Enter new guard count for this rig:", input -> {
+                try {
+                    int newCount = Integer.parseInt(input);
+                    rigManager.setGuardCount(rigName, Math.max(0, newCount));
+                    MsgManager.send(p, "Guard count set to " + newCount);
+                    open(player, rigName);
+                } catch (NumberFormatException ex) {
+                    MsgManager.send(p, "§cInvalid number entered!");
+                    open(player, rigName);
+                }
+            });
+        });
+
+// Edit Guard Radius button
+        ItemStack editGuardRadius = GUIManager.createItem(Material.COMPASS, "Edit Guard Radius");
+        ItemMeta radiusMeta = editGuardRadius.getItemMeta();
+        if (radiusMeta != null) {
+            radiusMeta.setLore(Arrays.asList(
+                    "§7Current guard radius: " + rigManager.getGuardRadius(rigName),
+                    "Click to change guard radius"
+            ));
+            editGuardRadius.setItemMeta(radiusMeta);
+        }
+        gui.addItem(12, editGuardRadius);
+        gui.setClickAction(12, (p, e) -> {
+            player.closeInventory();
+            ChatPromptManager promptManager = new ChatPromptManager(RigPlugin.getInstance());
+            promptManager.promptPlayer(p, "Enter new guard radius for this rig:", input -> {
+                try {
+                    int newRadius = Integer.parseInt(input);
+                    rigManager.setGuardRadius(rigName, Math.max(0, newRadius));
+                    MsgManager.send(p, "Guard radius set to " + newRadius);
+                    open(player, rigName);
+                } catch (NumberFormatException ex) {
+                    MsgManager.send(p, "§cInvalid number entered!");
+                    open(player, rigName);
+                }
+            });
+        });
+
+
+        // Back button
+        ItemStack back = GUIManager.createItem(Material.ARROW, "§eBack");
+        ItemMeta backMeta = back.getItemMeta();
+        if (backMeta != null) {
+            backMeta.setLore(List.of("Click to go back to the rigs list"));
+            back.setItemMeta(backMeta);
+        }
+        gui.addItem(17, back);
+        gui.setClickAction(17, (p, e) -> {
+            viewRigsInventory.open(p);
+        });
+
+
+
 
         gui.open(player);
     }
